
[project]
name = "drone-flightplan"
version = "0.1.0"
description = "Generates an optimized flight plan for drones to conduct precise and efficient aerial mapping"
authors = [
    {name = "Niraj Adhikari", email = "nrjadkry@gmail.com"},
]
dependencies = [
    "geojson>=3.1.0",
    "shapely>=2.0.5",
    "pyproj>=3.6.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[project.urls]
homepage = "https://github.com/hotosm/drone-flightplan"
repository = "https://github.com/hotosm/drone-flightplan"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
