
[project]
name = "drone-flightplan"
dynamic = ["version"]
description = "Generates an optimized flight plan for drones to conduct precise and efficient aerial mapping"
authors = [
    {name = "Niraj Adhikari", email = "nrjadkry@gmail.com"},
]
dependencies = [
    "geojson>=3.0.0",
    "shapely==2.0.0",
    "pyproj>=3.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[project.urls]
homepage = "https://github.com/hotosm/drone-flightplan"
repository = "https://github.com/hotosm/drone-flightplan"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "./drone_flightplan/__version__.py"
[tool.pdm.build]
includes = ["drone_flightplan"]
source-includes = ["LICENSE.md", "README.md"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
version_files = [
    "pyproject.toml:version",
    "drone_flightplan/__version__.py",
]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
